trying to fix the Auth on the header for dispalying on mobile

--- a/src/Components/Header/HeaderStyle.css
+++ b/src/Components/Header/HeaderStyle.css
@@ -185,10 +185,10 @@
       height: 90vh;
       flex-direction: column;
       align-items: center;
-      /* transform: translateX(100%); */
-      /* transition: transform 0.3s ease-in-out; */
+      transform: translateX(100%);
+      transition: transform 0.3s ease-in-out;
       opacity: 0;
-      /* visibility: hidden; */
+      visibility: hidden;
       background-color: #072ACB;
     } 
     /* .Header-Auth{
